# Mail-Certificate

./: .env.example  .gitignore  README.md  certficates.py  main.py  pyproject.toml  start.sh
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt  run.py  test_connection.py
backend/app/: main.py
backend/app/api/: admin.py  auth.py  certificates.py  events.py  feedback.py  participants.py  send.py  users.py
backend/app/core/: auth.py  config.py  database.py
backend/app/models/: db_models.py  schemas.py
backend/app/services/: certificate_service.py  excel_service.py  template_service.py
backend/app/utils/: fonts.py
backend/scripts/: create_admin.py
frontend/: index.html  package.json
frontend/src/: App.css  App.tsx  FeedbackForm.css  FeedbackForm.tsx  api.ts  index.css  main.tsx
frontend/src/components/: Layout.css  Layout.tsx  ProtectedRoute.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: Admin.css  Admin.tsx  Auth.css  Auth.tsx  Dashboard.css  Dashboard.tsx  Events.css  Events.tsx  Participants.css  Participants.tsx  Send.css  Send.tsx  Settings.css  Settings.tsx
participants/: participants.xlsx
